armor 3.0 api implemented
