# src/main/java/com/manolitsas/david/model/armor/Bulwark.java
@@ -1,0 +1,102 @@
+package com.manolitsas.david.model.armor;
+
+import static com.manolitsas.david.config.Constant.*;
+import static com.manolitsas.david.config.Constant.T5_SECONDARY_STAT;
+
+import com.manolitsas.david.dto.Archetype;
+import com.manolitsas.david.dto.Armor;
+import com.manolitsas.david.dto.ArmorSlot;
+import com.manolitsas.david.dto.ArmorStats;
+import com.manolitsas.david.dto.Stat;
+import com.manolitsas.david.exception.ArmorBadRequestException;
+import lombok.extern.slf4j.Slf4j;
+
+@Slf4j
+public class Bulwark extends BaseArmor {
+
+  public Bulwark() {
+    super(Archetype.BULWARK, Stat.HEALTH, Stat.propertyClass);
+  }
+
+  @Override
+  public ArmorStats getStats(ArmorStats stats, Armor armor, ArmorSlot slot) {
+
+    switch (armor.getTier()) {
+      case 1 -> {
+        stats.setHealth(stats.getHealth() + T1_PRIMARY_STAT);
+        stats.setPropertyClass(stats.getPropertyClass() + T1_SECONDARY_STAT);
+      }
+      case 2 -> {
+        stats.setHealth(stats.getHealth() + T2_PRIMARY_STAT);
+        stats.setPropertyClass(stats.getPropertyClass() + T2_SECONDARY_STAT);
+      }
+      case 3 -> {
+        stats.setHealth(stats.getHealth() + T3_PRIMARY_STAT);
+        stats.setPropertyClass(stats.getPropertyClass() + T3_SECONDARY_STAT);
+      }
+      case 4 -> {
+        stats.setHealth(stats.getHealth() + T4_PRIMARY_STAT);
+        stats.setPropertyClass(stats.getPropertyClass() + T4_SECONDARY_STAT);
+      }
+      case 5 -> {
+        stats.setHealth(stats.getHealth() + T5_PRIMARY_STAT);
+        stats.setPropertyClass(stats.getPropertyClass() + T5_SECONDARY_STAT);
+      }
+    }
+
+    stats = addArmorModStat(stats, armor.getMod());
+    stats = addTertiaryStatAndMasterwork(stats, armor, slot);
+    stats = addAttunement(stats, armor, slot);
+
+    return stats;
+  }
+
+  @Override
+  public ArmorStats addTertiaryStatAndMasterwork(ArmorStats stats, Armor armor, ArmorSlot slot) {
+    Stat tertiary = armor.getTertiary();
+    Boolean masterwork = armor.getMasterwork();
+
+    if (tertiary.equals(getPrimaryStat()) || tertiary.equals(getSecondaryStat())) {
+      String message = String.format("%s armor can not have tertiary stat in %s/%s", getArchetype(), getPrimaryStat(), getSecondaryStat());
+      log.warn(message);
+      throw new ArmorBadRequestException(slot, message);
+    }
+
+    switch (tertiary) {
+      case WEAPONS -> {
+        stats = addTertiaryWeapons(stats, armor);
+        if (masterwork) {
+          stats.setGrenade(stats.getGrenade() + MASTERWORK);
+          stats.setSuper(stats.getSuper() + MASTERWORK);
+          stats.setMelee(stats.getMelee() + MASTERWORK);
+        }
+      }
+      case GRENADE -> {
+        stats = addTertiaryGrenade(stats, armor);
+        if (masterwork) {
+          stats.setWeapons(stats.getWeapons() + MASTERWORK);
+          stats.setSuper(stats.getSuper() + MASTERWORK);
+          stats.setMelee(stats.getMelee() + MASTERWORK);
+        }
+      }
+      case SUPER -> {
+        stats = addTertiarySuper(stats, armor);
+        if (masterwork) {
+          stats.setWeapons(stats.getWeapons() + MASTERWORK);
+          stats.setGrenade(stats.getGrenade() + MASTERWORK);
+          stats.setMelee(stats.getMelee() + MASTERWORK);
+        }
+      }
+      case MELEE -> {
+        stats = addTertiaryMelee(stats, armor);
+        if (masterwork) {
+          stats.setWeapons(stats.getWeapons() + MASTERWORK);
+          stats.setGrenade(stats.getGrenade() + MASTERWORK);
+          stats.setSuper(stats.getSuper() + MASTERWORK);
+        }
+      }
+    }
+
+    return stats;
+  }
+}
